[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edwh-ghost"
dynamic = ["version", "dependencies", "optional-dependencies"]

description = "Python client for Ghost API v3/v4/v5/v6"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.7"
authors = [
    { name = "Remco Boerma", email = "remco.b@educationwarehouse.nl" },
    { name = "Robin van der NOord", email = "robin.vdn@educationwarehouse.nl" },
]

[tool.hatch.version]
path = "ghost/__about__.py"

[tool.semantic_release]
branch = "master"
version_variable = "ghost/__about__.py:__version__"
change_log = "CHANGELOG.md"
upload_to_repository = false
upload_to_release = false
build_command = "hatch build"

[project.urls]
Homepage = "https://github.com/educationwarehouse/edwh-ghost"

[tool.setuptools]
packages = ["ghost"]
zip-safe = false

[tool.ruff]
target-version = "py313"
line-length = 120
extend-exclude = ["jupyterlab"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = ["requirements-dev.txt"] }
