[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ghost"]

[project]
name = "edwh-ghost"
dynamic = ["version"]

description = "Python client for Ghost API v3/v4/v5/v6"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.7"
authors = [
    { name = "Remco Boerma", email = "remco.b@educationwarehouse.nl" },
    { name = "Robin van der NOord", email = "robin.vdn@educationwarehouse.nl" },
]

dependencies = [
    "PyJWT>=2.4.0",
    "requests",
    "yarl",
]

[project.optional-dependencies]
dev = [
    "edwh",
    "black",
    "pytest",
    "coverage",
    "Faker",
    "twine",
    "build",
    "python-dotenv",
]

[tool.hatch.version]
path = "src/ghost/__about__.py"

[tool.semantic_release]
branch = "master"
version_variable = "src/ghost/__about__.py:__version__"
change_log = "CHANGELOG.md"
upload_to_repository = false
upload_to_release = false
build_command = "hatch build"

[project.urls]
Homepage = "https://github.com/educationwarehouse/edwh-ghost"

[tool.setuptools]
packages = ["ghost"]
zip-safe = false

[tool.ruff]
target-version = "py313"
line-length = 120
extend-exclude = ["jupyterlab"]

